<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="12dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/current_location" />

        <EditText
            android:id="@+id/informaion_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:longClickable="false" />

        <Button
            android:id="@+id/determinate_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:text="@string/determinate_location" />

        <LinearLayout
            android:id="@+id/hiding_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:paddingLeft="10dp"
                android:text="@string/max_distance" />

            <Spinner
                android:id="@+id/distance_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="right" />

            <Button
                android:id="@+id/show_map_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:text="@string/show_on_map" />

            <Button
                android:id="@+id/select_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:text="@string/select_place" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>